# compressO-Cuda

./: index.html  package.json  vite.config.ts
src/: App.css  App.tsx  compression.rs  cuda_wrapper.rs  lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/cuda/: colorspace.cu  kernels.cu  kernels.h  preprocessing.cu  scaling.cu
src-tauri/src/: main.rs
src/components/: CompressionProgress.tsx  CompressionSettings.tsx  CudaSettings.tsx  JobQueueManager.tsx
src/components/ui/: form-components.tsx  index.ts
