[package]
name = "compresso-cuda"
version = "1.3.0"
description = "CUDA-accelerated video compression app"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/compressO-Cuda"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"
bindgen = "0.68.1"
cmake = "0.1.50"

[dependencies]
tauri = { version = "1.4", features = ["api-all", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
image = "0.24"
rayon = "1.7"

# CUDA-specific dependencies
cuda-runtime-sys = "0.3"
cuda-driver-sys = "0.3"
cudarc = { version = "0.9", features = ["cuda-12020", "driver"] }
half = "2.3"
bytemuck = "1.14"

# FFmpeg integration
ffmpeg-next = "6.0"
ffmpeg-sys-next = { version = "6.0", features = ["build"] }

# GPU memory management
gpu-allocator = { version = "0.23", features = ["cuda"] }

# Video processing utilities
nalgebra = "0.32"
ndarray = "0.15"

[features]
# Enable CUDA by default, but allow building without it
default = ["cuda"]
cuda = []
# Custom tauri features
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
debug = true
opt-level = 1
