[package]
name = "compresso-cuda"
version = "1.3.0"
description = "CUDA-accelerated video compression app"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/compressO-Cuda"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }
cc = "1.0"
bindgen = "0.68.1"

[dependencies]
tauri = { version = "1.4", features = ["api-all", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
image = "0.24"
rayon = "1.7"
regex = "1.10"

# CUDA-specific dependencies (only included when cuda feature is enabled)
cudarc = { version = "0.9", optional = true }
half = { version = "2.3", optional = true }
bytemuck = { version = "1.14", optional = true }

# Video processing utilities
nalgebra = "0.32"
ndarray = "0.15"

[features]
# Disable CUDA by default for initial testing
default = []
cuda = [
    "dep:cudarc",
    "dep:half", 
    "dep:bytemuck"
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
debug = true
opt-level = 1
