[package]
name = "compresso-cuda"
version = "1.3.0"
description = "CUDA-accelerated video compression app based on CompressO"
authors = ["smasonlawrence"]
license = "MIT"
repository = "https://github.com/smasonlawrence/compressO-Cuda"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["api-all", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
# Disable CUDA by default for initial testing
default = []
cuda = []

# Custom tauri features
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
debug = true
opt-level = 1
